5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1712_2499.log
== TEST (2019-05-08 23:26:44) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
e=0
while(e<k):
	e = e + (1/factorial(n)) 
	t=t+1
print(round(t, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(e<k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 23:26:49) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
e=0
while(e<k):
	e = e + (1/factorial(n)) 
	t=t+1
print(round(t, 1))
-- EXECUTION TIME:
0.140008
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 5, in <module>
    while(e<k):
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:27:08) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
e=0
while(e<n):
	e = e + (1/factorial(n)) 
	t=t+1
print(round(t, 1))
-- OUTPUT:
35281
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:27:38) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
e=0
while(t<n):
	e = e + (1/factorial(n)) 
	t=t+1
print(round(t, 1))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 23:27:41) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
e=0
while(t<n):
	e = e + (1/factorial(n)) 
	t=t+1
print(round(t, 1))
-- EXECUTION TIME:
0.362266
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
7
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
15
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:28:58) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h==n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:29:08) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h==n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:29:19) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h==n):
	t = t + (1/factorial(n)) 
	h=h+1
	print(round(t, 1))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:29:43) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:29:48) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:29:57) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:30:13) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:30:21) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:30:24) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 1))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:30:45) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 23:30:52) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 8))
-- EXECUTION TIME:
0.308837
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
0.00138889
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
0.00833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:30:57) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(h<n):
	t = t + (1/factorial(n)) 
	h=h+1
print(round(t, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:22) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + (1/factorial(n)) 
	t=t+1
print(round(t, 8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:29) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + (1/factorial(n)) 
	t=t+1
print(round(t, 8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:44) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + (1/factorial(n)) 
	t=t+1
print(round(t, 8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:49) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + (1/factorial(n)) 
	t=t+1
print(round(t, 8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:33:05) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + (1/factorial(n)) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:33:09) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + (1/factorial(n)) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:33:34) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 23:34:01) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
e=0
while(e<n):
	e = e + (1/factorial(n)) 
	t=t+1
print(round(t, 1))
-- EXECUTION TIME:
0.1646
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
35281
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:

-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
numero:0.00833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:34:20) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:35:52) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:35:56) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:36:52) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h - 1/factorial(n) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
-0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:36:58) 
-- CODE:
n=int(input("numero:"))
from math import*
t=0
h=0
while(t<n):
	h = h - 1/factorial(n) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
-0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:37:30) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0
while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:39:21) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0

while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:40:11) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=0

while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
0.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:40:22) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=1

while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:40:33) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=1

while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:40:44) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0

while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    h = h + 1/factorial(n) 
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:41:24) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0 

while(h<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
7.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:41:29) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0 

while(h<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
7.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:41:33) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0 

while(h<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
7.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:41:41) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0 

while(h<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
7.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:41:45) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0 

while(h<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
7.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:41:52) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0 

while(h<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
7.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:42:01) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0 

while(t<n):
	h = h + 1/factorial(n) 
	t=t+1
	
print(round(h, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:43:54) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
	
print(round(h, 8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:44:03) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:47:14) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
if(h==n):
	print(round(t, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:48:11) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0

while(h<n):
	h=h+1
	t = t + 1/factorial(n) 
	

print(round(t, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:52:56) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=1

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
0.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:53:27) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=0

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:53:56) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=1

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:54:00) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=1

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:54:09) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=1

while(h<n):
	t = t + 1/factorial(n) 
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:54:39) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=1

while(h<n):
	t = t + (1/factorial(n))
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:54:47) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=1

while(h<n):
	t = t + (1/factorial(n))
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:55:23) 
-- CODE:
from math import*
n=int(input("numero:"))

t=0
h=0

while(h<n):
	t = t + (1/factorial(n))
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:55:37) 
-- CODE:
from math import*
n=int(input("numero:"))

t=1
h=0

while(h<n):
	t = t + (1/factorial(n))
	h=h+1
	
print(round(t, 8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:58:02) 
-- CODE:
from math import*
n=0
e=0
t=0
while(h<n):
	n=int(input("numero:"))
	e = e + (1/factorial(n))
	h=h+1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(h<n):
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:58:19) 
-- CODE:
from math import*
n=0
e=0
t=0
while(t<n):
	n=int(input("numero:"))
	e = e + (1/factorial(n))
	t=t+1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(h<n):
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:58:29) 
-- CODE:
from math import*
n=int(input("numero:"))
e=0
t=0
while(t<n):
	n=int(input("numero:"))
	e = e + (1/factorial(n))
	t=t+1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:58:58) 
-- CODE:
from math import*
n=int(input("numero:"))
e=0
t=0
while(t<n):
	
	e = e + (1/factorial(n))
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 00:03:25) 
-- CODE:
from math import*
n=int(input("numero:"))
e=1
t=1
while(n>0 and n!=t):
	
	e = e + (1/factorial(n))
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 00:03:30) 
-- CODE:
from math import*
n=int(input("numero:"))
e=1
t=1
while(n>0 and n!=t):
	
	e = e + (1/factorial(n))
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 00:03:35) 
-- CODE:
from math import*
n=int(input("numero:"))
e=1
t=1
while(n>0 and n!=t):
	
	e = e + (1/factorial(n))
	t=t+1
	
print(round(e, 8))
-- EXECUTION TIME:
0.135531
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00119048
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.00694444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 00:03:49) 
-- CODE:
from math import *
repete=int(input("Quantas vezes o termo se repetira :"))
t=1
e=1
while (repete > 0) and (repete != t) :
	e= e + 1 / factorial(t)
	t=t + 1
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 00:04:58) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 00:05:03) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 00:05:09) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- EXECUTION TIME:
0.200905
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:37:30) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:37:36) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:26:31) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:26:35) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:26:39) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:26:43) 
-- CODE:
from math import*
n=int(input("numero:"))
t=1
e=1
while(n>0 and n!=t):
	
	e = e + 1/factorial(t)
	t=t+1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
